fix: article description overflow on Firefox

--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   padding: 15px;
+  overflow: hidden;
 }
 
 .Article-title {
